<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_activity_survay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.michal.plan.MainActivitySurvay"
    tools:showIn="@layout/activity_main_survay"
    android:orientation="vertical">


    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/solvayViewFlipper">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/startLayout">
            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nameEditText" />

            <TextView
                android:text="@string/pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/passTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passEditText" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/aimLayout">
            <TextView
                android:text="@string/aim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/aimTextView" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/aimRadioGrup">

                <RadioButton
                    android:text="@string/reduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reductionRadioButton"
                    />

                <RadioButton
                    android:text="@string/keep_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/keepRadioButton"
                    android:checked="true"
                    />

                <RadioButton
                    android:text="@string/build_mass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buildRadioButton"
                    />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/healthLayout">

            <TextView
                android:text="@string/healty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/healthyTextView" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/healthRadioGrup">

                <RadioButton
                    android:text="@string/healty_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/healthRadioButton"
                    />

                <RadioButton
                    android:text="@string/Diabets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/diabetsRadioButton"
                    android:checked="true"
                    />

                <RadioButton
                    android:text="@string/Fat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fatRadioButton"
                    />
            </RadioGroup>

            <TextView
                android:text="@string/type_diet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/typDietTextView" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/typDietRadioGrup">

                <RadioButton
                    android:text="@string/H_carbo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/carboRadioButton"
                    />

                <RadioButton
                    android:text="@string/L_carbo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lowCarboRadioButton"
                    android:checked="true"
                    />

                <RadioButton
                    android:text="@string/keto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ketoRadioButton"
                    />
            </RadioGroup>


            <TextView
                android:text="@string/typ_diabets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/typDiabetsTextView" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/typDiabetsRadioGrup">

                <RadioButton
                    android:text="@string/typ_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/typOneRadioButton"
                    />

                <RadioButton
                    android:text="@string/typ_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/typTwoRadioButton"
                    android:checked="true"
                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/personalLayout">

            <TextView
                android:text="@string/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weightTextView" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weightSeekBar"
                android:max="140"/>

            <TextView
                android:text="@string/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/heightTextView" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/heightSeekBar"
                android:max="250"/>

            <TextView
                android:text="@string/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ageTextView" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ageSeekBar"
                android:max="110"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/activityLayout"
            android:visibility="visible">

            <TextView
                android:text="@string/lvl_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activityTextView" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activityRadioGrup">

                <RadioButton
                    android:text="@string/low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lowRadioButton"
                    />

                <RadioButton
                    android:text="@string/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mediumCarboRadioButton"
                    android:checked="true"
                    />

                <RadioButton
                    android:text="@string/big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bigRadioButton"
                    />
            </RadioGroup>

            <TextView
                android:text="@string/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sexTextView" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sexRadioGrup">

                <RadioButton
                    android:text="@string/man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/manRadioButton"
                    />

                <RadioButton
                    android:text="@string/woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/womanCarboRadioButton"
                    android:checked="true"
                    />
            </RadioGroup>

        </LinearLayout>


    </ViewFlipper>
</LinearLayout>
